add loading of zarr files

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 add meta arguments
 add table to zarr array
 add start time, end time, total time
+add zarr file loading
+
+add .attrs and .zgroup for single save
