simple table save working

--- a/mytests/amumax.ipynb
+++ b/mytests/amumax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -31,17 +31,39 @@
      "output_type": "stream",
      "text": [
       "/\n",
-      " ├── B_demag (11, 1, 50, 50, 3) float32\n",
-      " ├── qwe (1, 1, 50, 50, 3) float32\n",
-      " └── table\n",
-      "     ├── m (11, 3) float32\n",
-      "     └── t (11,) float64\n"
+      " └── m (3, 2) float64\n"
      ]
     }
    ],
    "source": [
+    "# !cp .zarray test1.zarr/m/.zarray\n",
+    "# !rm test1.zarr/m/1\n",
+    "# !rm test1.zarr/m/2\n",
     "m = op(\"test1.zarr\")\n",
     "m.p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.57735032, -0.57735025],\n",
+       "       [ 0.57735032, -0.57735025],\n",
+       "       [ 0.57735032, -0.57735025]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = m['m'][:]\n",
+    "arr"
    ]
   }
  ],
