--- a/mytests/amumax.ipynb
+++ b/mytests/amumax.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -31,39 +31,34 @@
      "output_type": "stream",
      "text": [
       "/\n",
-      " └── m (3, 2) float64\n"
+      " └── table\n",
+      "     └── m (3, 21) float64\n",
+      "[[ 1.69166176e-08  0.00000000e+00  1.69166176e-08  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  1.69166176e-08  0.00000000e+00\n",
+      "   2.53749264e-08 -8.45830879e-08 -6.76664703e-08 -6.76664703e-08\n",
+      "  -1.52249558e-07 -2.53749264e-08 -2.02999411e-07  3.38332352e-08\n",
+      "   3.38332352e-08 -1.86082793e-07  2.02999411e-07 -3.38332352e-08\n",
+      "   1.77624485e-07]\n",
+      " [ 2.11457720e-09  2.11457720e-09  0.00000000e+00  0.00000000e+00\n",
+      "  -6.34373159e-09  9.19841081e-08  5.60362958e-08  4.01769668e-08\n",
+      "   1.69166176e-07 -8.24685107e-08  1.09958014e-07  1.07843437e-07\n",
+      "  -3.09256915e-07 -1.05728860e-07 -4.59920541e-07 -5.07498528e-08\n",
+      "  -9.93851283e-08 -7.40102019e-08  2.45290955e-07  1.22116833e-07\n",
+      "   1.98770257e-07]\n",
+      " [ 4.22502172e-03  3.07327660e-02  4.90580599e-02 -3.83380205e-02\n",
+      "  -3.71750411e-02 -1.44319943e-04  2.58780329e-02  4.51221212e-02\n",
+      "  -3.22007160e-02 -5.36203575e-02  1.73920401e-02  1.73920401e-02\n",
+      "   4.27061533e-02 -2.02632891e-02 -5.94914853e-02  1.49030506e-02\n",
+      "   3.30894919e-02  2.67253525e-02 -1.17580156e-02 -6.64474969e-02\n",
+      "   1.69934772e-02]]\n"
      ]
     }
    ],
    "source": [
-    "# !cp .zarray test1.zarr/m/.zarray\n",
-    "# !rm test1.zarr/m/1\n",
-    "# !rm test1.zarr/m/2\n",
     "m = op(\"test1.zarr\")\n",
-    "m.p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.57735032, -0.57735025],\n",
-       "       [ 0.57735032, -0.57735025],\n",
-       "       [ 0.57735032, -0.57735025]])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr = m['m'][:]\n",
-    "arr"
+    "m.p\n",
+    "print(m[\"table/m\"][:])\n",
+    "# print(m[\"E_total\"][:])"
    ]
   }
  ],
