--- a/mytests/amumax.ipynb
+++ b/mytests/amumax.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -32,34 +32,59 @@
      "text": [
       "/\n",
       " └── table\n",
-      "     └── m (3, 21) float64\n",
-      "[[ 1.69166176e-08  0.00000000e+00  1.69166176e-08  0.00000000e+00\n",
-      "   0.00000000e+00  0.00000000e+00  1.69166176e-08  0.00000000e+00\n",
-      "   2.53749264e-08 -8.45830879e-08 -6.76664703e-08 -6.76664703e-08\n",
-      "  -1.52249558e-07 -2.53749264e-08 -2.02999411e-07  3.38332352e-08\n",
-      "   3.38332352e-08 -1.86082793e-07  2.02999411e-07 -3.38332352e-08\n",
-      "   1.77624485e-07]\n",
-      " [ 2.11457720e-09  2.11457720e-09  0.00000000e+00  0.00000000e+00\n",
-      "  -6.34373159e-09  9.19841081e-08  5.60362958e-08  4.01769668e-08\n",
-      "   1.69166176e-07 -8.24685107e-08  1.09958014e-07  1.07843437e-07\n",
-      "  -3.09256915e-07 -1.05728860e-07 -4.59920541e-07 -5.07498528e-08\n",
-      "  -9.93851283e-08 -7.40102019e-08  2.45290955e-07  1.22116833e-07\n",
-      "   1.98770257e-07]\n",
-      " [ 4.22502172e-03  3.07327660e-02  4.90580599e-02 -3.83380205e-02\n",
-      "  -3.71750411e-02 -1.44319943e-04  2.58780329e-02  4.51221212e-02\n",
-      "  -3.22007160e-02 -5.36203575e-02  1.73920401e-02  1.73920401e-02\n",
-      "   4.27061533e-02 -2.02632891e-02 -5.94914853e-02  1.49030506e-02\n",
-      "   3.30894919e-02  2.67253525e-02 -1.17580156e-02 -6.64474969e-02\n",
-      "   1.69934772e-02]]\n"
+      "     └── m (3, 11) float64\n",
+      "[[ 0.00000000e+00 -3.38332352e-08  3.38332352e-08  0.00000000e+00\n",
+      "   3.38332352e-08 -5.07498528e-08  5.07498528e-08  1.69166176e-08\n",
+      "   0.00000000e+00  1.69166176e-08 -6.76664703e-08]\n",
+      " [ 1.05728860e-09  0.00000000e+00  1.05728860e-08  4.22915440e-09\n",
+      "   3.80623896e-08  6.49571683e-08  4.75779870e-08  4.86352756e-08\n",
+      "   6.34373159e-08 -5.92081616e-08  5.07498528e-08]\n",
+      " [ 4.22502225e-03  3.10297287e-02  4.90960250e-02 -3.82801572e-02\n",
+      "  -3.71560437e-02 -1.57856195e-04  2.56693220e-02  4.51267860e-02\n",
+      "  -3.21978000e-02 -5.35358082e-02  1.73920337e-02]]\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09fc381de40e4731b323fabdf4f30e41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "m = op(\"test1.zarr\")\n",
     "m.p\n",
     "print(m[\"table/m\"][:])\n",
-    "# print(m[\"E_total\"][:])"
+    "# print(m[\"E_total\"][:])\n",
+    "plt.figure()\n",
+    "plt.plot(m['table/m'][2])\n",
+    "plt.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
