--- a/mytests/amumax.ipynb
+++ b/mytests/amumax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -31,20 +31,16 @@
      "output_type": "stream",
      "text": [
       "/\n",
-      " ├── b (11, 1, 50, 50, 3) float32\n",
-      " ├── final (1, 1, 50, 50, 3) float32\n",
-      " ├── m (11, 1, 50, 50, 3) float32\n",
-      " ├── notstable (1, 1, 50, 50, 3) float32\n",
       " └── table\n",
-      "     ├── E_total (101,) float64\n",
-      "     ├── m (3, 101) float64\n",
-      "     └── t (101,) float64\n"
+      "     ├── B_demag (3, 1001) float64\n",
+      "     ├── m (3, 1001) float64\n",
+      "     └── t (1001,) float64\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc75ebd53bb34443af7b6e2157ccf2dd",
+       "model_id": "c204c4aaed594827b17074a12d474e0c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -58,10 +54,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe074f50a30>]"
+       "[<matplotlib.lines.Line2D at 0x7f0b0d350f40>]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,9 +66,9 @@
     "m = op(\"test1.zarr\")\n",
     "m.p\n",
     "plt.figure()\n",
-    "plt.plot(m.m.attrs['Buffer'])\n",
-    "# plt.plot(m.table.t[:],m.table.m[2,:])\n",
-    "# m.plot.snapshot('b',t=5)"
+    "# plt.plot(m.m.attrs['Buffer'])\n",
+    "plt.plot(m.table.t[:],m.table.m[2,:])\n",
+    "# m.plot.snapshot('m',t=5)"
    ]
   },
   {
